# netbox-prometheus-sd

./: README.md  pyproject.toml
example/initializers/: virtual_machines.yml
netbox_prometheus_http_sd/: __init__.py
netbox_prometheus_sd/api/: views.py
